--- a/src/app/components/music-library/music-library.component.scss
+++ b/src/app/components/music-library/music-library.component.scss
@@ -1,6 +1,17 @@
 .music-library {
   padding: 20px;
 
+  .library-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 20px;
+
+    h1 {
+      margin: 0;
+    }
+  }
+
   h1 {
     margin-bottom: 20px;
   }
