MUS-37 advence func is done

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,7 +1,9 @@
 .app-container {
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
+  height: 100vh;
+  background: #1a1a1a;
+  color: #ffffff;
 }
 
 .main-content {
