--- a/src/styles.scss
+++ b/src/styles.scss
@@ -21,5 +21,7 @@ $theme: mat.define-light-theme((
 html, body {
   height: 100%;
   margin: 0;
+  padding: 0;
+  
   font-family: Roboto, "Helvetica Neue", sans-serif;
 }
