--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,8 @@
-<div class="app-container">
+<div>
   <app-header></app-header>
-<main class="main-content">
-  <router-outlet></router-outlet>
-</main>
-<app-footer></app-footer>
+  <main>
+    <router-outlet></router-outlet>
+  </main>
+  <app-audio-player></app-audio-player>
+  <app-footer></app-footer>
 </div>
