--- a/src/app/components/shared/footer/footer.component.html
+++ b/src/app/components/shared/footer/footer.component.html
@@ -1,4 +1,39 @@
-
-    <mat-toolbar class="footer">
-      <span>© 2024 Music Player. All rights reserved.</span>
-    </mat-toolbar>
+<footer>
+  <div class="footer-container">
+    <div class="footer-content">
+      <div class="footer-brand">
+        <mat-icon class="footer-icon">music_note</mat-icon>
+        <span class="footer-brand-text">Music Library</span>
+      </div>
+      
+      <div class="footer-links">
+        <div class="links-group">
+          <h3>Company</h3>
+          <a href="#">About Us</a>
+          <a href="#">Contact</a>
+          <a href="#">Careers</a>
+        </div>
+        
+        <div class="links-group">
+          <h3>Legal</h3>
+          <a href="#">Privacy Policy</a>
+          <a href="#">Terms of Service</a>
+          <a href="#">Cookie Policy</a>
+        </div>
+        
+        <div class="links-group">
+          <h3>Follow Us</h3>
+          <div class="social-links">
+            <a href="#" matTooltip="Twitter"><mat-icon>twitter</mat-icon></a>
+            <a href="#" matTooltip="Facebook"><mat-icon>facebook</mat-icon></a>
+            <a href="#" matTooltip="Instagram"><mat-icon>instagram</mat-icon></a>
+          </div>
+        </div>
+      </div>
+    </div>
+    
+    <div class="footer-bottom">
+      <p>&copy; 2024 Music Library. All rights reserved.</p>
+    </div>
+  </div>
+</footer>
