--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,12 +1,1 @@
-.app-container {
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
-  background-color: #f5f5f5;
-}
-
-.main-content {
-  flex: 1;
-  padding: 2rem;
-  margin-bottom: 138px; /* Space for footer + player */
-}
+/* Removed all existing styles */
